--- a/index.html
+++ b/index.html
@@ -27,8 +27,15 @@
         </article>
         <article class="photobooth hide" id="photobooth">
             <section id="photobooth_content">
-                <div id="photo">
-                    <video id="myVideo" width="100%" height="100%" preload autoplay loop muted></video></div>
+                <div id="stream">
+                    <div class="camera">
+                        <video id="myVideo"></video>
+                    </div>
+                    <canvas id="canvas"></canvas>
+                    <div class="output">
+                        <img src="" id="photoOutput" alt="The screen capture will appear in this box.">
+                    </div>
+                </div>
                 <div>
                     <p id="text_prompt" class="animated"></p>
                 </div>
