local storage for storing images added

--- a/index.html
+++ b/index.html
@@ -15,14 +15,34 @@
     <div id="screenBorder">
         <article class="collage show" id="collage">
             <section id="collage_content">
-                <div class="photos"></div>
-                <div class="photos"></div>
+                <div class="photos">
+                    <div class="small_img"></div>
+                    <div class="big_img"></div>
+                    <div class="big_img"></div>
+                    <div class="small_img"></div>
+                </div>
+                <div class="photos">
+                    <div class="big_img"></div>
+                    <div class="big_img"></div>
+                    <div class="small_img"></div>
+                    <div class="big_img"></div>
+                </div>
                 <div id="heading">
                     <h3>PHOTOBOOTH</h3>
                     <h2>X marks the spot</h2>
                 </div>
-                <div class="photos"></div>
-                <div class="photos"></div>
+                <div class="photos">
+                    <div class="big_img"></div>
+                    <div class="small_img"></div>
+                    <div class="big_img"></div>
+                    <div class="big_img"></div>
+                </div>
+                <div class="photos">
+                    <div class="small_img"></div>
+                    <div class="big_img"></div>
+                    <div class="big_img"></div>
+                    <div class="small_img"></div>
+                </div>
             </section>
         </article>
         <article class="photobooth hide" id="photobooth">
